--- a/money.web/packages.config
+++ b/money.web/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
+  <package id="Dapper" version="1.50.2" targetFramework="net47" />
+  <package id="Dapper.Contrib" version="1.50.0" targetFramework="net47" />
   <package id="jQuery" version="3.2.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
