--- a/money.web/Web.config.TEMPLATE
+++ b/money.web/Web.config.TEMPLATE
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <connectionStrings>
+        <add name="Main" connectionString="Server=localhost;Database=money;Trusted_Connection=yes" />
+    </connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
