--- a/money.web/packages.config
+++ b/money.web/packages.config
@@ -15,5 +15,9 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="Ninject" version="3.3.3" targetFramework="net47" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
