--- a/money.web/packages.config
+++ b/money.web/packages.config
@@ -6,6 +6,7 @@
   <package id="Dapper.Contrib" version="1.50.0" targetFramework="net47" />
   <package id="jQuery" version="3.2.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
