--- a/money.web/Views/Web.config
+++ b/money.web/Views/Web.config
@@ -15,6 +15,7 @@
                 <add namespace="System.Web.Mvc.Html" />
                 <add namespace="System.Web.Optimization"/>
                 <add namespace="System.Web.Routing" />
+                <add namespace="money.common" />
                 <add namespace="money.web" />
                 <add namespace="money.web.Models" />
             </namespaces>
