--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -138,11 +138,13 @@
   <ItemGroup>
     <Compile Include="Abstract\IDTO.cs" />
     <Compile Include="Abstract\IQueryHelper.cs" />
+    <Compile Include="Abstract\IRequestContext.cs" />
     <Compile Include="Abstract\IUnitOfWork.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Concrete\QueryHelper.cs" />
+    <Compile Include="Concrete\RequestContext.cs" />
     <Compile Include="Concrete\UnitOfWork.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
     <Compile Include="Controllers\UsersController.cs" />
