--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Models\Categories\CreateCategoryViewModel.cs" />
     <Compile Include="Models\Categories\ListCategoriesViewModel.cs" />
     <Compile Include="Models\Categories\UpdateCategoryViewModel.cs" />
+    <Compile Include="Models\MonthlyBudgets\MonthlyBudgetCategoryViewModel.cs" />
     <Compile Include="Models\MonthlyBudgets\UpdateMonthlyBudgetViewModel.cs" />
     <Compile Include="Models\MonthlyBudgets\CreateMonthlyBudgetViewModel.cs" />
     <Compile Include="Models\MonthlyBudgets\ListMonthlyBudgetsViewModel.cs" />
@@ -222,6 +223,7 @@
     <Content Include="Views\Categories\Create.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Views\Categories\Update.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\MonthlyBudgetCategoryViewModel.cshtml" />
     <None Include="Web.config.TEMPLATE" />
   </ItemGroup>
   <ItemGroup>
