--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Concrete\QueryHelper.cs" />
     <Compile Include="Concrete\RequestContext.cs" />
     <Compile Include="Concrete\UnitOfWork.cs" />
+    <Compile Include="Controllers\PartiesController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\MonthlyBudgetsController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
@@ -155,6 +156,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Parties\CreatePartyViewModel.cs" />
+    <Compile Include="Models\Parties\ListPartiesViewModel.cs" />
+    <Compile Include="Models\Parties\UpdatePartyViewModel.cs" />
     <Compile Include="Models\Categories\CreateCategoryViewModel.cs" />
     <Compile Include="Models\Categories\ListCategoriesViewModel.cs" />
     <Compile Include="Models\Categories\UpdateCategoryViewModel.cs" />
@@ -224,6 +228,9 @@
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Views\Categories\Update.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\MonthlyBudgetCategoryViewModel.cshtml" />
+    <Content Include="Views\Parties\Create.cshtml" />
+    <Content Include="Views\Parties\Index.cshtml" />
+    <Content Include="Views\Parties\Update.cshtml" />
     <None Include="Web.config.TEMPLATE" />
   </ItemGroup>
   <ItemGroup>
