--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Concrete\QueryHelper.cs" />
     <Compile Include="Concrete\RequestContext.cs" />
     <Compile Include="Concrete\UnitOfWork.cs" />
+    <Compile Include="Controllers\EntriesController.cs" />
     <Compile Include="Controllers\PartiesController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\MonthlyBudgetsController.cs" />
@@ -156,6 +157,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entries\CreateEntryViewModel.cs" />
+    <Compile Include="Models\Entries\ListEntriesViewModel.cs" />
+    <Compile Include="Models\Entries\UpdateEntryViewModel.cs" />
     <Compile Include="Models\Parties\CreatePartyViewModel.cs" />
     <Compile Include="Models\Parties\ListPartiesViewModel.cs" />
     <Compile Include="Models\Parties\UpdatePartyViewModel.cs" />
@@ -231,6 +235,9 @@
     <Content Include="Views\Parties\Create.cshtml" />
     <Content Include="Views\Parties\Index.cshtml" />
     <Content Include="Views\Parties\Update.cshtml" />
+    <Content Include="Views\Entries\Create.cshtml" />
+    <Content Include="Views\Entries\Index.cshtml" />
+    <Content Include="Views\Entries\Update.cshtml" />
     <None Include="Web.config.TEMPLATE" />
   </ItemGroup>
   <ItemGroup>
