--- a/money.web/Scripts/tsconfig.json
+++ b/money.web/Scripts/tsconfig.json
@@ -4,7 +4,12 @@
         "noEmitOnError": true,
         "removeComments": false,
         "sourceMap": true,
-        "target": "es5"
+        "target": "es5",
+        "lib": [
+            "dom",
+            "es5",
+            "es2015.iterable"
+        ]
     },
     "compileOnSave": true,
     "exclude": [
