--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\AuthAttribute.cs" />
     <Compile Include="Support\AuthFilter.cs" />
+    <Compile Include="Support\SqlMapperExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
