--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\AuthAttribute.cs" />
     <Compile Include="Support\AuthFilter.cs" />
+    <Compile Include="Support\Extensions.cs" />
     <Compile Include="Support\SqlMapperExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
