--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Models\Entries\CreateEntryViewModel.cs" />
     <Compile Include="Models\Entries\EntryType.cs" />
+    <Compile Include="Models\Entries\ListEntriesEntryViewModel.cs" />
     <Compile Include="Models\Entries\ListEntriesViewModel.cs" />
     <Compile Include="Models\Entries\UpdateEntryViewModel.cs" />
     <Compile Include="Models\Home\CategoryViewModel.cs" />
