--- a/money.web/packages.config
+++ b/money.web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
+  <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net47" />
   <package id="Dapper" version="1.50.4" targetFramework="net47" />
   <package id="Dapper.Contrib" version="1.50.4" targetFramework="net47" />
   <package id="jQuery" version="3.2.1" targetFramework="net47" />
@@ -13,7 +14,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
-  <package id="Microsoft.Net.Compilers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="Ninject" version="3.3.4" targetFramework="net47" />
