Implement AJAX entry form and partial updates of overview

--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -343,6 +343,7 @@
     <Content Include="Views\Home\AddEntry.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
+    <Content Include="Views\Home\_Account.cshtml" />
     <None Include="Web.config.TEMPLATE" />
   </ItemGroup>
   <ItemGroup>
