--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -161,6 +161,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Entities\Account.cs" />
+    <Compile Include="Models\Entities\AccountType.cs" />
     <Compile Include="Models\Entities\Category.cs" />
     <Compile Include="Models\Entities\Category_MonthlyBudget.cs" />
     <Compile Include="Models\Entities\Entry.cs" />
