Implement account type update, tidy up forms

--- a/money.web/Views/Web.config
+++ b/money.web/Views/Web.config
@@ -18,6 +18,7 @@
                 <add namespace="money.common" />
                 <add namespace="money.web" />
                 <add namespace="money.web.Models" />
+                <add namespace="money.web.Support" />
             </namespaces>
         </pages>
     </system.web.webPages.razor>
