EntryType is now a flag and moved into the entity namespace

--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -174,7 +174,7 @@
     <Compile Include="Models\Entities\Partials\Account.cs" />
     <Compile Include="Models\Entities\Party.cs" />
     <Compile Include="Models\Entities\User.cs" />
-    <Compile Include="Models\Entries\EntryType.cs" />
+    <Compile Include="Models\Entities\EntryType.cs" />
     <Compile Include="Models\Entries\ListEntriesEntryViewModel.cs" />
     <Compile Include="Models\Entries\ListEntriesViewModel.cs" />
     <Compile Include="Models\Entries\UpdateEntryViewModel.cs" />
