--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -220,13 +220,9 @@
     <Content Include="Content\favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\bootstrap-datepicker3.standalone.min.css.map" />
     <Content Include="Content\bootstrap-datepicker3.standalone.css.map" />
-    <Content Include="Content\bootstrap-datepicker3.min.css.map" />
     <Content Include="Content\bootstrap-datepicker3.css.map" />
-    <Content Include="Content\bootstrap-datepicker.standalone.min.css.map" />
     <Content Include="Content\bootstrap-datepicker.standalone.css.map" />
-    <Content Include="Content\bootstrap-datepicker.min.css.map" />
     <Content Include="Content\bootstrap-datepicker.css.map" />
     <None Include="Content\site.scss" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -239,24 +235,30 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="gulpfile.js" />
     <Content Include="package.json" />
-    <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-3.2.1.js" />
-    <Content Include="Scripts\jquery-3.2.1.min.js" />
-    <Content Include="Scripts\jquery-3.2.1.slim.js" />
-    <Content Include="Scripts\jquery-3.2.1.slim.min.js" />
+    <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\jquery-3.3.1.js" />
+    <Content Include="Scripts\jquery-3.3.1.min.js" />
+    <Content Include="Scripts\jquery-3.3.1.slim.js" />
+    <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
+    <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
+    <Content Include="Scripts\jquery-3.3.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <TypeScriptCompile Include="Scripts\site.ts" />
+    <Content Include="Scripts\locales\bootstrap-datepicker-en-CA.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.ar-tn.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.ar.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.az.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.bg.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.bn.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.br.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.bs.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.ca.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.cs.min.js" />
@@ -266,6 +268,9 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.el.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.en-AU.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.en-GB.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.en-IE.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.en-NZ.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.en-ZA.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.eo.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.es.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.et.min.js" />
@@ -277,6 +282,7 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.fr.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.gl.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.he.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.hi.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.hr.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.hu.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.hy.min.js" />
@@ -288,6 +294,7 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.ka.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.kh.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.kk.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.km.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.ko.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.kr.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.lt.min.js" />
@@ -300,6 +307,7 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.nl-BE.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.nl.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.no.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.oc.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.pl.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.pt-BR.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.pt.min.js" />
@@ -307,6 +315,7 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.rs-latin.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.rs.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.ru.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.si.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.sk.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.sl.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.sq.min.js" />
@@ -314,9 +323,13 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.sr.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.sv.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.sw.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.ta.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.tg.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.th.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.tr.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.uk.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.uz-cyrl.min.js" />
+    <Content Include="Scripts\locales\bootstrap-datepicker.uz-latn.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.vi.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.zh-CN.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.zh-TW.min.js" />
@@ -358,8 +371,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <Content Include="Scripts\jquery-3.2.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.2.1.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
