--- a/.editorconfig
+++ b/.editorconfig
@@ -68,7 +68,7 @@ csharp_style_expression_bodied_accessors = true:error
 
 # Suggest more modern language features when available
 csharp_style_pattern_matching_over_is_with_cast_check = true:error
-csharp_style_pattern_matching_over_as_with_null_check = true:error
+csharp_style_pattern_matching_over_as_with_null_check = true:none
 csharp_style_inlined_variable_declaration = true:error
 csharp_style_throw_expression = true:error
 csharp_style_conditional_delegate_call = true:error
