--- a/money.web/packages.config
+++ b/money.web/packages.config
@@ -21,6 +21,7 @@
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net47" />
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net47" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net47" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
