--- a/money.test/packages.config
+++ b/money.test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net47" />
+  <package id="StyleCop.Analyzers" version="1.1.0-beta008" targetFramework="net47" developmentDependency="true" />
 </packages>
