App is now deployed using Web Deploy

--- a/money.web/money.web.csproj
+++ b/money.web/money.web.csproj
@@ -217,6 +217,8 @@
     <Compile Include="Support\SqlMapperExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\ajax-loader-dark.gif" />
+    <Content Include="Content\ajax-loader-light.gif" />
     <Content Include="Content\bootstrap-datepicker.css" />
     <Content Include="Content\bootstrap-datepicker.min.css" />
     <Content Include="Content\bootstrap-datepicker.standalone.css" />
@@ -230,6 +232,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\favicon.ico" />
+    <Content Include="Content\site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\bootstrap-datepicker3.standalone.css.map" />
@@ -251,6 +254,7 @@
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\AWS.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -261,6 +265,10 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <TypeScriptCompile Include="Scripts\site.ts" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
@@ -374,7 +382,6 @@
     <Content Include="Views\Home\_NetWorth.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Decimal.cshtml" />
     <Content Include="tslint.json" />
-    <None Include="Web.config.TEMPLATE" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\money.common\money.common.csproj">
