Basic domain and infrastructure is now ported

--- a/money/appsettings.json
+++ b/money/appsettings.json
@@ -1,8 +1,9 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+﻿{
+    "ConnectionString": "Server=localhost;Database=money;Trusted_Connection=yes",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
