--- a/money/appsettings.json
+++ b/money/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
     "ConnectionString": "Server=localhost;Database=money;Trusted_Connection=yes",
+    "PersistentSessionLengthInDays": 90,
     "Logging": {
         "LogLevel": {
             "Default": "Warning"
