--- a/money/money.csproj
+++ b/money/money.csproj
@@ -9,6 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Content Remove="package-lock.json" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Dapper" Version="1.60.6" />
         <PackageReference Include="Dapper.Contrib" Version="1.60.1" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
