--- a/money/package.json
+++ b/money/package.json
@@ -11,12 +11,15 @@
         "@types/jquery.validation": "1.16.6",
         "@types/js-cookie": "2.2.2",
         "clean-webpack-plugin": "2.0.2",
+        "gulp": "4.0.2",
+        "gulp-sass": "4.0.2",
+        "gulp-autoprefixer": "6.1.0",
         "jest": "24.8.0",
         "source-map-loader": "0.2.4",
         "ts-jest": "24.0.2",
         "ts-loader": "6.0.0",
         "ts-node": "8.1.0",
-        "typescript": "3.4.5",
+        "typescript": "3.5.1",
         "webpack": "4.31.0",
         "webpack-cli": "3.3.2"
     },
@@ -36,6 +39,9 @@
         "test": "jest",
         "coverage": "jest --coverage"
     },
+    "browserslist": [
+        "defaults"
+    ],
     "jest": {
         "preset": "ts-jest",
         "testEnvironment": "jsdom",
