--- a/money/appsettings.json
+++ b/money/appsettings.json
@@ -3,7 +3,7 @@
     "PersistentSessionLengthInDays": 90,
     "Logging": {
         "LogLevel": {
-            "Default": "Warning"
+            "Default": "Error"
         }
     },
     "AllowedHosts": "*"
