--- a/money/appsettings.Staging.json
+++ b/money/appsettings.Staging.json
@@ -1,4 +1,9 @@
 {
     "ConnectionString": "Server=localhost;Database=money_STAGING;Trusted_Connection=yes",
-    "PersistentSessionLengthInDays": 90
+    "PersistentSessionLengthInDays": 90,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    }
 }
