Namespace is now capitalised (adhere to MS guidelines)

--- a/money/money.csproj
+++ b/money/money.csproj
@@ -6,6 +6,7 @@
         <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
         <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
         <LangVersion>latest</LangVersion>
+        <RootNamespace>Money</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
