Configuration values are now substituted by CI
IIS environment vars are no longer required, making setup much simpler.

--- a/money/appsettings.json
+++ b/money/appsettings.json
@@ -1,10 +1,10 @@
 {
-    "ConnectionString": "Server=localhost;Database=money;Trusted_Connection=yes",
+    "AllowedHosts": "*",
+    "ConnectionString": "CI_SECRET",
     "PersistentSessionLengthInDays": 90,
     "Logging": {
         "LogLevel": {
             "Default": "Error"
         }
-    },
-    "AllowedHosts": "*"
+    }
 }
