Client-side code is mow built by CI pipeline

--- a/money/package.json
+++ b/money/package.json
@@ -31,6 +31,7 @@
     },
     "scripts": {
         "build": "webpack --mode=production --display-modules",
+        "build-css": "gulp sass",
         "watch": "webpack --watch --mode=production"
     },
     "browserslist": [
