--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,16 +19,36 @@ steps:
     clean: true
     msbuildArguments: '/p:OutDir=$(Build.ArtifactStagingDirectory)'
 
-- task: DotNetCoreCLI@2
-  displayName: Publish
+- task: Npm@1
+  displayName: 'NPM Package Restore'
   inputs:
-    command: publish
+    command: 'ci'
+    workingDir: '$(Build.SourcesDirectory)/money'
+
+- task: Npm@1
+  displayName: 'NPM Build'
+  inputs:
+    command: 'custom'
+    workingDir: '$(Build.SourcesDirectory)/money'
+    customCommand: 'run build'
+
+- task: Npm@1
+  displayName: 'NPM Build CSS'
+  inputs:
+    command: 'custom'
+    workingDir: '$(Build.SourcesDirectory)/money'
+    customCommand: 'run build-css'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish'
+  inputs:
+    command: 'publish'
     publishWebProjects: True
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
 
 - task: PublishBuildArtifacts@1
-  displayName: Push Artifact
+  displayName: 'Push Artifact'
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: 'money-publish-output'
